@@ -10,17 +10,17 @@ AUX i2pd.logrotate 270 SHA256 cac89d98a0c2eff2eeedb323b3b81c3e316293f80d3397bfeb
 AUX i2pd.service 412 SHA256 afc2b4a72e3bec2c45a838971375a1e8a438bc9cb09a082f138583e226ee8402 SHA512 99ec3dbe7c983d732c483207f49a9b9456c83c17b76605f663fb177142e09e11e0e3fe4e10ffaaca3b9e08519a055ab5efee4117b6e977d22ec80c6aa7c3d3eb WHIRLPOOL dc47e828a8a457e16e16ff5dae50c73fdeaa6a79d36d2f2d4e44919e06e222a2b14d0677c77ef2d471107d8ce669ad499172656f3985bee18697f2725df2e95e
 DIST i2pd-0.5.0.tar.gz 352460 SHA256 7f2033fe1c380c458722d68f611d0fa69a844ceba71db13a918adac6e01a0594 SHA512 08c51dc5fa3712af54b7dcc9f4524fb19d7b42a279646c7852efdf1fd49cf4ea24192c936229954c3733ba4bcbc480205bcfeca739ffae3642f5c62bd24e0cf6 WHIRLPOOL 1812a8733f17cd6b9885cf8af3ad0412f238356121118d46fbed53cb826aaa6c878a045adb69e0a692fd5cd3fc720192c635f4e594d3d42efb2116f14bbba9e9
 EBUILD i2pd-0.5.0.ebuild 1845 SHA256 d359c5eae64a9421cb831938eee3d4d8a484cd872169b40c0b93bda40b7b2420 SHA512 f2844531b16a4be3609bda365326354d3ecae205434bffe4eaa2e5b4177f723e97be2ae1d222bb9a28d6e40c015dea09071bccc7b2a7faa9ceb23009b32b6cdb WHIRLPOOL e1d8c5c591479d80f5912a7d5bf0e17b1b0f0323260506862a03000d345aaded6bc9172e5cecdc24a9a3804316175a81665f1a18724431ca4c6074d7ae2a900f
-EBUILD i2pd-9999.ebuild 1875 SHA256 2e34270722cfb8501c282c89d14987a1857cc6adb70f50c884b988e5cbbe9fd3 SHA512 18877c292889d5d614fdd310a243e0e574fe98f124ac29411a716a634318b2a25770505635444994c6903d1303c1b24625463c860ed4c2afaf3cf085b25f7d38 WHIRLPOOL 283361622bfee68c94b832bae9c43d5e86f146fc6031c9620da6c55ebcc36a789bf0c3329f6cdd69abe418b56259f2f6eccf48dd8f8fb3463020ca71071b9ede
-MISC ChangeLog 964 SHA256 3bca0c8b425880c2da8a1111758eec9671ca91d9a6e4bfe816a6bec8dbe2e613 SHA512 e8a7b791db1784c361a2298ba10add1c8697d22b504e35e12d8981ca8c19d8f5a48264b6d3bbe2872ee91e53cabcd26ca4121736b6c5957feea2190b75bddc7e WHIRLPOOL 469a878b60bf3426a37801982d73e58076ca9a903b8896553d17a70d44e171649efdd1ba60836dba02f254051059ba20b47ace9824005c3398d8c63c7de15438
+EBUILD i2pd-9999.ebuild 2131 SHA256 1c49076a53ba83162873d660fa0982891b3a3e7608a5cf575cb113c5acc31046 SHA512 96e90f10e1110138eb897af17c13d2e18a70145d40fdd81b9f2e5a454daab47dce59a6c05cd5a5a03ac2a17618a13f4946788acee75e9a1649ad680847ffa97d WHIRLPOOL fe7594f28f4208faad9d38d537dbb81149d69d0e67f7d5f04572a29c2a82a5dc76a3729e0298230e9b7c128acd58698746ac0e1490836dd6a174ecf1c5cbccac
+MISC ChangeLog 1136 SHA256 5ba63b4f909dddc0cbe5e3a7cd7b33d7eb1e4fb0b9b9d403b381e0d272e5e3f5 SHA512 8b548e20c7f17ee0607ae39669cacc19dbb783b53af733409d640c542cbc52a16b509903f9303ca8424688a321cd176713783afe63ce8849f8ad36d314ea1e23 WHIRLPOOL 4bf7ca4344008d70eb638318e939fe4da1e638d2dd4db826a989fdb09b5c6fd4798b750f094c55701ee9e19c47d030901bd18a7a41dcd41c118af98fa36e4645
 MISC metadata.xml 505 SHA256 94805fb4a94ff250fb81c585d9088f9575b6cef36b717bee72a566fe7a9d13aa SHA512 c4ff8b6c0535316934c77fd3c5249481a4c2a619a4f743b7f7784ff25e1b2839690239581c1d92b4176d4369c4f6a5a488f206c3ed6cc0433843e08b1f2c20f5 WHIRLPOOL 8231dfd31bdbc80c375f3efc8f190c10bd208c553e070ae3181bcf3d7e0760b540877a90f347080c43984c6a6a3815e91f5e211972058b444869b43b82c7e710
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUotFQAAoJEKXBodJLEo5SEYAH/jXCwjAIH7utVG4dWJplNIt9
-aVKLS7yQ3MC8Csk4qxjsyLhfUP6cafppjaZUOniSBOliXzhbHQclXLYxKPChz+xy
-y4rgMXwzh2c7IZRrlweLgyht1e3jpfHuB7p2N/6xlWRJtoeGzVyNbGkW6hzROlid
-vxQ9UKb6qHB1rqgz9AiPrlgMp0OVPAKCi4TUpPM2A5q7vB497nk9hlIK1IcyaG7a
-Iki9IPSnQfDVnXfoYJ/mNUbn/FJ3fBasoh6h+BvFcED9xOOE+rqtXslweTR4QCmV
-JzWAy3tMqqUMc9z4En+zS9NGISZCX5IOwb4u53uKOvjL0CHnGV6pCZmuN76zAxI=
-=BxHf
+iQEcBAEBCAAGBQJUpE8eAAoJEKXBodJLEo5SA5kH/1WwEEKSXb+yoBEAKVxiA+bo
+GgieS2/2xgAcEbfIuS1yKJDS/8CcsMjude1SmN785PeKHWKMpG0PekB1E/guwRyz
+aEnTXLWIH15WN2ljc+G4ilO/komplJyLGpgYqjRF98m/rF5n30aKwfjeZjiPlbGM
+QQ2Vidx0T/kCSMrmr40br83hyARRwv/x8w4vmtpxpUzZeZSOsJVufvqlQF8VM0t7
+cVH3ADtDw9d6TibwCGEZ9yZikkW4S+IcjqyEx4TYryIYzJWfDohOSbKHmRur/Lpb
+4/UxJesN4OsSFTy6Nq4PS2Ok9Stfx6SFAwXU/+wl5HgF7SzxDdkf0bWAtdzdFxs=
+=lUQm
 -----END PGP SIGNATURE-----
